fix z-index issue on dashboard page with menu

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -17526,7 +17526,7 @@ disabled look for disabled choices in the results dropdown
   position: absolute;
   top: 10px;
   left: 80px;
-  z-index: 1000;
+  z-index: 10;
 }
 
 .passing, .running {
